# player

./: README.md  pyproject.toml
datas/: aic_corpusId.csv  sixtopics-corpusId.csv
results/: sixtopic_KMeans_cluster_n_7_clusters.csv  sixtopic_NoKernel_GaussianMixture_cluster_n_7_clusters.csv  sixtopic_SpectralClustering_cluster_n_7_clusters.csv
src/: config.py
src/experiments/: eval_clustering.py  eval_kenel.py  eval_unit_score.py
src/player/: 1_gram_matrix.py  2_bayesian_optm.py  3_divergence.py  exp_eval_clustering.py  exp_eval_player.py
src/s2ag/: fetch_author_by_author_id.py  fetch_citations.py  fetch_papers_by_corpus_id.py  fetch_recommendations.py
src/utils/: cleansing.py  cutting_out.py  evaluate.py  join.py  s2ag.py  util.py
src/visual/: bar.py  coloring_csv.py  interactive_3d.py  interactive_3d_coloring.py  interactive_3d_coloring_by_article.py  line.py
